--- a/CSS/style.css
+++ b/CSS/style.css
@@ -11,7 +11,8 @@
     height: 64px;
     display: flex;
     align-items: center;
-    font-family: var(--font2);
+    /* box-shadow: 2px 2px #d3cdcd; */
+    padding: 7px;
 }
 
 
@@ -46,36 +47,73 @@
 .nav-left ul li a {
     text-decoration: none;
     color: black;
-    font-family: var(--font1);
+}
+
+.nav-left ul li a:hover {
+    color: var(--main-bg-color);
+    font-weight: bolder;
 }
 
 
-/* Navigation Bar:Search input */
-
-.form-input {
-    padding: 3px 4px;
-    border: 2px solid black;
-    margin: 0px 5px;
-    font-size: 0.8vw;
-    font-family: var(--font1);
-    padding-top: 5px;
-}
-
-.btn {
-    padding: 3px 7px;
-    border: 2px solid;
-    color: black;
-    border-radius: 7px;
-    font-family: var(--font1);
-    cursor: pointer;
-}
+/* Content */
 
 .content {
-    height: 95px;
-    background-color: blue;
+    height: 335px;
+    display: flex;
+    margin-top: 32px;
+    padding: 12px;
 }
+
+.content-left {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.content-left h1 {
+    margin: 12px 2px;
+    font-size: 1vw;
+}
+
+.content-left p {
+    margin: 0px 2px;
+    font-size: 0.8vw;
+    line-height: 22px;
+}
+
+.content-right {
+    width: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.content-right img {
+    height: 256px;
+    border: 2px solid black;
+    border-radius: 250px;
+}
+
+
+/* Articles */
+
+.home-articles {
+    height: 455px;
+    /* background-color: red; */
+}
+
+.home-article {}
 
 .footer {
     height: 50px;
-    background-color: green;
+    background-color: var(--main-bg-color);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: white;
+}
+
+.footer a {
+    color: white;
 }
