--- a/CSS/util.css
+++ b/CSS/util.css
@@ -10,16 +10,59 @@
     --font2: 'Ubuntu', sans-serif;
 }
 
+
+/* Font */
+
+.font-1 {
+    font-family: var(--font1);
+}
+
+.font-2 {
+    font-family: var(--font2);
+}
+
+
+/* Width */
+
 .max-width-1 {
     max-width: 80vw;
 }
 
 .max-width-2 {
-    max-width: 60vw;
+    max-width: 70vw;
 }
+
+.max-width-3 {
+    max-width: 50vw;
+}
+
+
+/* Margin Auto */
 
 .m-auto {
     margin: auto;
 }
 
-.btn {}
+.form-input {
+    height: 25px;
+    padding: 7px 15px;
+    border: 2px solid black;
+    margin: 0px 12px;
+    font-size: 0.9vw;
+    padding-top: 7px;
+}
+
+.btn {
+    height: 41px;
+    padding: 7px 14px;
+    border: 2px solid;
+    color: black;
+    border-radius: 34px;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+}
+
+.btn:hover {
+    color: white;
+    background-color: var(--main-bg-color);
+}
