--- a/CSS/style.css
+++ b/CSS/style.css
@@ -13,21 +13,29 @@
     align-items: center;
     /* box-shadow: 2px 2px #d3cdcd; */
     padding: 7px;
+    margin-top: 20px;
 }
 
 
 /*Navigation Bar:Left */
 
 .nav-left {
-    font-size: 1vw;
+    font-size: 18px;
+    /* font-size: 1vw; */
     display: flex;
 }
 
 
 /*Navigation Bar:Logo */
 
+.nav-left img {
+    width: 80px;
+    border-radius: 18px;
+}
+
 .nav-left span {
-    font-size: 2vw;
+    /* font-size: 35px; */
+    /* font-size: 2vw; */
 }
 
 
@@ -61,10 +69,20 @@
     height: 335px;
     display: flex;
     margin-top: 32px;
-    padding: 12px;
+    position: relative;
+}
+
+.content::after {
+    content: "";
+    background: url(../Images/triangles-1430105.svg);
+    position: absolute;
+    width: 100%;
+    height: inherit;
+    opacity: 0.2;
 }
 
 .content-left {
+    padding: 45px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -72,23 +90,27 @@
 
 .content-left h1 {
     margin: 12px 2px;
-    font-size: 1vw;
+    /* font-size: 1vw; */
+    font-size: 22px;
 }
 
 .content-left p {
     margin: 0px 2px;
-    font-size: 0.8vw;
+    font-size: 15px;
+    /* font-size: 0.8vw; */
     line-height: 22px;
 }
 
 .content-right {
+    width: 40%;
+    padding: 25px;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
 .content-right img {
-    height: 256px;
+    height: 316px;
     border: 2px solid black;
     border-radius: 250px;
 }
@@ -97,13 +119,55 @@
 /* Articles */
 
 .home-articles {
-    height: 455px;
-    /* background-color: red; */
+    height: 1300px;
+    position: relative;
+    margin-bottom: 52px;
+    margin-top: 25px;
 }
 
-.home-article {}
+.home-articles:before {
+    content: "";
+    background: url(../Images/triangles-1430105.svg);
+    position: absolute;
+    width: 100%;
+    height: inherit;
+    opacity: 0.15;
+    background-size: cover;
+    background-repeat: no-repeat;
+    z-index: -1;
+}
+
+.home-articles h2 {
+    position: relative;
+    padding: 22px 45px;
+}
+
+.home-article {
+    display: flex;
+    padding: 7px 45px;
+    margin: 25px;
+}
+
+.home-article-img img {
+    width: 225px;
+    border: 1px solid rgb(68, 68, 68);
+    height: 156px;
+}
+
+.home-article-content {
+    align-self: center;
+    padding: 25px;
+    font-size: 15px;
+    cursor: pointer;
+}
+
+.home-article-content a {
+    text-decoration: none;
+    color: black;
+}
 
 .footer {
+    /* width: 100%; */
     height: 50px;
     background-color: var(--main-bg-color);
     display: flex;
